# MAG

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: ARCHITECTURE.md  BOOTSTRAP.md  EVAL_PROTOCOL.md  SPEC.md
docs/eval_reports/: PROJECT_CLEANUP_2026-03-05.md  README_eval_2026-03-04.md
eval/: baselines.md  questions_pl.jsonl
results/: versions.json
src/app/: __init__.py  bench_pdf_parsers.py  config.py  eval_chat.py  eval_io.py  logging.py  preflight_questions.py  types.py  ui_chainlit.py
src/app/chat/: __main__.py  service.py
src/app/dialogue/: __init__.py  prompt_builder.py  teacher_policy.py
src/app/ingest/: __main__.py  chroma_index.py  chunker.py  pdf_parsers.py
src/app/memory/: summarizer.py  window.py
src/app/persistence/: db.py  export_jsonl.py  repositories.py  schema.sql
src/app/retrieval/: chroma_retriever.py  citations.py  hybrid.py
src/app/runtime/: ollama_client.py
tests/: test_chat_grounding_guard.py  test_chat_meta_preferences.py  test_chat_service_context_guard.py  test_chat_service_no_context.py  test_citations.py  test_cli_slash_commands.py  test_eval_chat.py  test_hybrid_retrieval.py  test_ingest.py  test_memory.py  test_no_context_gating.py  test_phase1_prototype_smoke.py  test_preflight_questions.py  test_prompt_assembly.py  test_retrieval.py  test_teacher_style_presets.py  test_teacher_ux_preferences.py  test_thread_isolation.py  test_thread_preferences.py
